# jefe

./: .dockerignore  .gitignore  @progress.txt  AGENT.md  AGENTS.md  Dockerfile  Makefile  PROMPT.md  README.md  VISION.md  alembic.ini  conftest.py  docker-compose.override.yml.example  docker-compose.yml  jefe.db  progress.txt  pyproject.toml  ruff.toml  station_chief.db
.beads/: issues.jsonl
.cub/runs/jobfish-20260113-142948/: run.json
.cub/runs/jobfish-20260113-142948/tasks/sc-056/: changes.patch  summary.md  task.json
.cub/runs/jobfish-20260113-142948/tasks/sc-057/: changes.patch  summary.md  task.json
.cub/runs/jobfish-20260113-142948/tasks/sc-058/: changes.patch  summary.md  task.json
.cub/runs/jobfish-20260113-142948/tasks/sc-059/: changes.patch  summary.md  task.json
.cub/runs/jobfish-20260113-142948/tasks/sc-060/: changes.patch  summary.md  task.json
.cub/runs/jobfish-20260113-142948/tasks/sc-061/: changes.patch  summary.md  task.json
.cub/runs/jobfish-20260113-142948/tasks/sc-062/: changes.patch  summary.md  (+1 more)
.curb/runs/beaver-20260112-221758/: run.json
.curb/runs/crocodile-20260113-070307/: run.json
.curb/runs/dragonfly-20260112-162416/: run.json
.curb/runs/dragonfly-20260112-162707/: run.json
.curb/runs/gnu-20260113-071725/: run.json
.curb/runs/hedgehog-20260112-201439/: run.json
.curb/runs/loon-20260112-201410/: run.json
.curb/runs/pika-20260112-162400/: run.json
.curb/runs/quail-20260112-202547/: run.json
.curb/runs/seal-20260112-232033/: run.json
.curb/runs/snail-20260112-144854/: run.json
.curb/runs/snake-20260113-062310/: run.json
.curb/runs/starfish-20260113-073258/: run.json
.curb/runs/swallow-20260113-080337/: run.json
.curb/runs/walrus-20260112-201715/: run.json
.curb/runs/weasel-20260112-142637/: run.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 21f4f0db3fcb_add_harnesses_and_configs.py  39153ba35d7c_add_skills_and_skill_sources.py  404572f4fbfa_add_translation_logs.py  4f1cce48b53c_add_knowledge_entries.py  692340dab373_add_projects_and_manifestations.py  7a5fe513eb30_add_installed_skills.py  81f553b4121d_add_bundles.py  8d3e28539be6_initial_setup.py
docs/: gemini-cli-research.md  opencode-research.md  recipe-format.md
examples/recipes/: bundles-only.yaml  cli-tool.yaml  data-science.yaml  minimal.yaml  web-ui.yaml
schemas/: recipe.schema.json
src/jefe/: __init__.py
src/jefe/adapters/: __init__.py  base.py  claude_code.py  codex_cli.py  gemini_cli.py  opencode.py  registry.py
src/jefe/cli/: __init__.py  api.py  app.py  client.py  config.py
src/jefe/cli/cache/: __init__.py  database.py  manager.py  models.py  repositories.py
src/jefe/cli/commands/: __init__.py  bundles.py  config.py  harnesses.py  knowledge.py  projects.py  skills.py  sources.py  status.py  sync.py  translate.py
src/jefe/cli/sync/: __init__.py  protocol.py
src/jefe/data/: __init__.py  database.py
src/jefe/data/models/: __init__.py  bundle.py  harness.py  harness_config.py  installed_skill.py  knowledge.py  manifestation.py  project.py  skill.py  skill_source.py  translation_log.py
src/jefe/data/repositories/: __init__.py  base.py  bundle.py  harness.py  harness_config.py  installed_skill.py  knowledge.py  manifestation.py  project.py  projects.py  skill.py  skill_source.py  translation_log.py
src/jefe/server/: __main__.py  app.py  auth.py
src/jefe/server/api/: __init__.py  auth.py  bundles.py  harnesses.py  health.py  knowledge.py  projects.py  recipes.py  skills.py  sources.py  status.py  sync.py  translation.py
src/jefe/server/llm/: __init__.py  openrouter.py
src/jefe/server/schemas/: __init__.py  bundle.py  common.py  harness.py  harnesses.py  knowledge.py  projects.py  recipe.py  skill.py  source.py  status.py  sync.py  translation.py
src/jefe/server/services/: __init__.py  bundle.py  discovery.py  harness.py  knowledge.py  recipe.py  skill.py  skill_source.py  sync.py
src/jefe/server/utils/: skill_parser.py
src/jefe/web/: __init__.py  routes.py
src/jefe/web/templates/: base.html  dashboard.html  index.html
src/station_chief/adapters/: __init__.py
src/station_chief/cli/: __init__.py  app.py  config.py
src/station_chief/cli/commands/: config.py
src/station_chief/data/: database.py
src/station_chief/data/models/: __init__.py  base.py
src/station_chief/data/repositories/: __init__.py  base.py
src/station_chief/server/: __init__.py  __main__.py  app.py  auth.py
src/station_chief/server/api/: __init__.py  auth.py  health.py
src/station_chief/server/schemas/: __init__.py
src/station_chief/web/: __init__.py
tests/: test_database.py  test_placeholder.py
tests/adapters/: test_claude_code.py  test_codex_cli.py  test_gemini_cli.py  test_opencode.py  test_registration.py  test_registry.py
tests/adapters/fixtures/claude_code/: CLAUDE.md  settings.json
tests/adapters/fixtures/gemini_cli/: GEMINI.md  settings.json  test.toml
tests/cli/: test_bundles.py  test_config.py  test_conflict_commands.py  test_harnesses.py  test_init.py  test_knowledge.py  test_offline.py  test_projects.py  test_skills.py  test_sources.py  test_status.py  test_sync_commands.py  test_translate.py
tests/cli/cache/: test_cache_manager.py  test_database.py  test_models.py  test_repositories.py
tests/cli/sync/: __init__.py  test_protocol.py
tests/data/: test_installed_skill_repo.py  test_project_repo.py  test_skill_repo.py  test_translation_log_repo.py
tests/fixtures/: invalid_skill.md  malformed_yaml.md
tests/fixtures/sample_skills_repo/: SKILL.md
tests/fixtures/sample_skills_repo/subdirectory/: SKILL.md
tests/server/: test_auth.py  test_bundles_api.py  test_discovery.py  test_harnesses_api.py  test_health.py  test_knowledge_api.py  test_knowledge_service.py  test_projects_api.py  test_recipe.py  test_semantic_translation.py  test_skill_parser.py  test_skill_service.py  test_skill_source_service.py  test_skills_api.py  test_sources_api.py  test_sync_api.py  test_syntax_translation.py  test_translation_api.py  test_translation_service.py
tests/server/llm/: test_openrouter.py
(+202 files in other folders)
