[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jefe"
version = "0.1.0"
description = "A comprehensive Git repository management system with web and CLI interfaces"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jefe Team", email = "team@jefe.dev"},
]
keywords = ["git", "repository", "management", "web", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "httpx>=0.25.0",
    "gitpython>=3.1.40",
    "pyyaml>=6.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/jefe"
Documentation = "https://jefe.readthedocs.io"
Repository = "https://github.com/yourusername/jefe.git"
Issues = "https://github.com/yourusername/jefe/issues"

[project.scripts]
jefe = "jefe.cli.app:app"
sc = "jefe.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/jefe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=jefe --cov-report=term-missing"

[tool.coverage.run]
source = ["jefe"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
disallow_any_generics = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "gitpython.*",
    "tomli_w",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["jefe", "tests"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
